@@ -59,17 +59,17 @@ maintainer-clean-local:
 uninstall-local:
 	rm -rf $(DESTDIR)$(docdatadir)/apidoc
 
-MAINTAINERCLEANFILES= doxygen_api_conf doxygen_full_conf \
+MAINTAINERCLEANFILES = doxygen_api_conf doxygen_full_conf \
 	code_structure.html apidoc.ps sourcedoc.ps
 
-.FORCE: doxygen_source_docs doxygen_api_docs doxygen_docs
+.PHONY: doxygen_source_docs doxygen_api_docs doxygen_docs
 
 doxygen_source_docs: sourcedoc/html/index.html
 doxygen_api_docs: apidoc/html/index.html
 doxygen_docs: doxygen_source_docs doxygen_api_docs
 
-doxygen_api_conf: $(top_srcdir)/configure.ac
-doxygen_full_conf: $(top_srcdir)/configure.ac
+doxygen_api_conf: doxygen_api_conf.in $(top_srcdir)/configure.ac
+doxygen_full_conf: doxygen_full_conf.in $(top_srcdir)/configure.ac
 
 if MAINTAINER_MODE
 # Depend on configure.ac so we rebuild if VERSION changes.
@@ -80,36 +80,29 @@ code_structure.html: mkdoc.pl $(top_srcdir)/configure.ac
 # their sizes down.
 T=$(top_srcdir)
 
-# docsources.mk is generated by preautoreconf, run by bootstrap prior to
+# docsource.mk is generated by preautoreconf, run by bootstrap prior to
 # it running autoreconf.
 include docsource.mk
 
-apidoc/html/index.html: $(top_srcdir)/configure.ac \
+# "make refman.ps" sometimes fails for no obvious reason on the first attempt.
+# Repeating the command works, so just do that!
+apidoc.ps apidoc/html/index.html: $(APIDOC_SRC) $(srcdir)/doxygen_api_conf \
 		$(srcdir)/doxygen_api_header.html_tmpl \
-		$(srcdir)/doxygen_api_footer.html_tmpl \
-		$(srcdir)/doxygen_api_conf.in \
-		$(APIDOC_SRC)
+		$(srcdir)/doxygen_api_footer.html_tmpl
 	rm -rf apidoc
 	top_srcdir=$(top_srcdir) top_builddir=$(top_builddir) $(DOXYGEN) doxygen_api_conf
-
-# "make refman.ps" sometimes fails for no obvious reason on the first attempt.
-# Repeating the command works, so just do that!
-apidoc.ps: apidoc/html/index.html
-	cd apidoc/latex && (pool_size=750000 $(MAKE) refman.ps;pool_size=750000 $(MAKE) refman.ps)
+	cd apidoc/latex && (pool_size=750000 $(MAKE) refman.ps||pool_size=750000 $(MAKE) refman.ps)
 	mv apidoc/latex/refman.ps apidoc.ps
 
-sourcedoc/html/index.html: $(top_srcdir)/configure.ac \
-		$(srcdir)/doxygen_full_header.html_tmpl \
-		$(srcdir)/doxygen_full_footer.html_tmpl \
-		$(srcdir)/doxygen_full_conf.in \
-		$(SOURCEDOC) $(APIDOC_SRC)
-	rm -rf sourcedoc
-	top_srcdir=$(top_srcdir) $(DOXYGEN) doxygen_full_conf
-
 # "make refman.ps" sometimes fails for no obvious reason on the first attempt.
 # Repeating the command works, so just do that!
-sourcedoc.ps: sourcedoc/html/index.html
-	cd sourcedoc/latex && (pool_size=750000 $(MAKE) refman.ps;pool_size=750000 $(MAKE) refman.ps)
+sourcedoc.ps sourcedoc/html/index.html: $(SOURCEDOC_SRC) $(APIDOC_SRC) \
+		$(srcdir)/doxygen_full_conf \
+		$(srcdir)/doxygen_full_header.html_tmpl \
+		$(srcdir)/doxygen_full_footer.html_tmpl
+	rm -rf sourcedoc
+	top_srcdir=$(top_srcdir) top_builddir=$(top_builddir) $(DOXYGEN) doxygen_full_conf
+	cd sourcedoc/latex && (pool_size=750000 $(MAKE) refman.ps||pool_size=750000 $(MAKE) refman.ps)
 	mv sourcedoc/latex/refman.ps sourcedoc.ps
 endif
 
